--- a/.github/workflows/tests.yml
+++ b/.github/workflows/tests.yml
@@ -8,32 +8,29 @@ on:
 
 jobs:
   lint:
+    name: lint
     runs-on: ubuntu-latest
     steps:
-      - name: Setup go
-        uses: actions/setup-go@v3
+      - uses: actions/checkout@v4
+      - uses: actions/setup-go@v5
         with:
-          go-version: '^1.18'
-      - name: Checkout repository
-        uses: actions/checkout@v3
-      - name: Setup golangci-lint
-        uses: golangci/golangci-lint-action@v3.3.1
+          go-version-file: 'go.mod'
+      - name: golangci-lint
+        uses: golangci/golangci-lint-action@v6
         with:
           version: latest
-          args: --verbose
   test:
     needs: lint
     strategy:
       matrix:
-        go: [1.18, 1.19]
+        go: [1.18, 1.19, 1.20, 1.21, 1.22, 1.23, 1.24, 1.25]
     runs-on: ubuntu-latest
     steps:
+      - uses: actions/checkout@v4
       - name: Set up Go ${{ matrix.go }}
-        uses: actions/setup-go@v3
+        uses: actions/setup-go@v5
         with:
           go-version: ${{ matrix.go }}
-      - name: Checkout Code
-        uses: actions/checkout@v3
       - name: Run Tests
         run: |
           go test -v ./...
